# raspigcd2

./: .coveralls.yml  .travis.yml  CMakeLists.txt  README.md  t.gcd  v4.json
__old_experiments_01/: .travis.yml  README.md
__old_experiments_01/include/: buttons_t.hpp  configuration_t.hpp  executor_sim_t.hpp  g_code_interpreter_t.hpp  generic_spindle_t.hpp  motion_plan_t.hpp  motor_layout_t.hpp  raspi_buttons_t.hpp  raspi_pwm_spindle_t.hpp
__old_experiments_01/src/: buttons_t.cpp  configuration_t.cpp  executor_pi_t.cpp
app1/: pom.xml
app1/src/main/java/pl/edu/pjatk/tau/: App.java
app1/src/test/java/pl/edu/pjatk/tau/: AppTest.java
include/: buttons_t.hpp  configuration.hpp  configuration_json.hpp  configuration_t.hpp  configuration_t_json.hpp  distance_t.hpp  executor_pi_t.hpp  executor_sim_t.hpp  executor_t.hpp  g_code_interpreter_t.hpp  generic_spindle_t.hpp  hardware_dof_conf.hpp  motion_plan_t.hpp  motor_layout_t.hpp  program_t.hpp  program_t_json.hpp  step_sequence_executor_t.hpp  steps_t.hpp
include/converters/: gcd_program_to_raw_gcd.hpp  gcd_program_to_steps.hpp
include/gcd/: factory.hpp  gcode_interpreter.hpp  gcode_interpreter_objects_t.hpp  gcode_moves_to_intentions.hpp  path_intent_executor.hpp  remove_g4_from_gcode.hpp
include/hardware/: low_buttons.hpp  low_spindles_pwm.hpp  low_steppers.hpp  low_timers.hpp  raspberry_pi.hpp  stepping.hpp  stepping_commands.hpp  thread_helper.hpp
include/hardware/driver/: file_producer.hpp  inmem.hpp  low_buttons_fake.hpp  low_spindles_pwm_fake.hpp  low_timers_busy_wait.hpp  low_timers_fake.hpp  low_timers_wait_for.hpp  low_visualization_sdl.hpp  raspberry_pi.hpp
include/movement/: movement_plan_t.hpp  path_intent_t.hpp  physics.hpp  simple_steps.hpp  steps_analyzer.hpp  steps_generator.hpp  variable_speed.hpp
src/: configuration.cpp  configuration_t.cpp  distance_t.cpp  executor_pi_t.cpp  executor_sim_t.cpp  executor_t.cpp  g_code_interpreter_t.cpp  generic_spindle_t.cpp  hardware_stepping.cpp  motion_plan_t.cpp  motor_layout_t.cpp  movement_steps_generator.cpp  raspigcd.cpp  step_sequence_executor_t.cpp
src/converters/: gcd_program_to_raw_gcd.cpp  gcd_program_to_steps.cpp
src/gcd/: factory.cpp  gcode_interpreter.cpp  path_intent_executor.cpp  remove_g4_from_gcode.cpp  remove_g92_from_gcode.cpp
src/hardware/: motor_layout.cpp  stepping.cpp  thread_helper.cpp
src/hardware/driver/: inmem.cpp  low_timers_busy_wait.cpp  low_timers_fake.cpp  low_timers_wait_for.cpp  raspberry_pi.cpp
src/movement/: physics.cpp  simple_steps.cpp  steps_analyzer.cpp  steps_generator.cpp  variable_speed.cpp
tddrework/: CMakeLists.txt  README.md
tddrework/include/: configuration.hpp  configuration_json.hpp  distance_t.hpp  hardware_low_steppers.hpp  hardware_motor_layout.hpp  hardware_raspberry_pi.hpp  hardware_stepping.hpp  hardware_stepping_commands.hpp  movement_accelerations.hpp  movement_constant_speed.hpp  movement_simple_steps.hpp  movement_variable_speed.hpp  steps_t.hpp
tddrework/include/hardware/: low_buttons.hpp  low_spindles_pwm.hpp  low_steppers.hpp  motor_layout.hpp  raspberry_pi.hpp  stepping.hpp  stepping_commands.hpp  thread_helper.hpp
tddrework/include/movement/: constant_speed.hpp  simple_steps.hpp  steps_generator.hpp  variable_speed.hpp
tddrework/src/: configuration.cpp  hardware_motor_layout.cpp  hardware_raspberry_pi.cpp  hardware_stepping.cpp  hardware_thread_helper.cpp  movement_constant_speed.cpp  movement_simple_steps.cpp  movement_steps_generator.cpp  movement_variable_speed.cpp  raspigcd.cpp
tddrework/tests/: configuration_test.cpp  hardware_stepping_test.cpp  movement_constant_speed_test.cpp  movement_variable_speed_test.cpp
tests/: _e2e_factory_test.cpp  _e2e_path_intent_executor_test.cpp  configuration_test.cpp  converters_gcd_program_to_raw_gcd_test.cpp  converters_gcd_program_to_steps_test.cpp  distance_t_test.cpp  executor_t_test.cpp  gcode_interpreter_apply_machine_limits_test.cpp  gcode_interpreter_command_to_map_of_arguments_test.cpp  gcode_interpreter_g0_move_to_g1_sequence_test.cpp  gcode_interpreter_g1_move_to_g1_sequence_with_limits_test.cpp  gcode_interpreter_gcode_to_maps_of_arguments_test.cpp  gcode_interpreter_generate_paht_intent_test.cpp  gcode_interpreter_group_gcode_commands_test.cpp  gcode_interpreter_insert_additional _nodes_inbetween_test.cpp  gcode_interpreter_merge_blocks_test.cpp  gcode_interpreter_test.cpp  gcode_interpreter_work_moves_optimize_test.cpp  gcode_interpreter_work_moves_optimize_test.cpp.bak  hardware_stepping_test.cpp  motion_plan_t_test.cpp  movement_physics_test.cpp  movement_simple_steps_test.cpp  movement_steps_analyzer_test.cpp  movement_steps_generator_test.cpp  movement_variable_speed_calculate_linear_coefficient_from_limits_test.cpp  movement_variable_speed_calculate_linear_velocity_from_limits_test.cpp  movement_variable_speed_test.cpp  path_intent_executor_breaks_and_stops_test.cpp  path_intent_executor_test.cpp  problem_1.gcd  problem_2.gcd  stepping_breaks_and_stops_test.cpp  tests.cpp  tests_helper.hpp  timers_test.cpp
tests/converters/: gcd_program_to_steps_test.cpp
tests/gcd/: gcode_interpreter_optimize_path_douglas_peucker_test.cpp  remove_g4_from_gcode_test.cpp
tests/hardware/: stepping_sim_test.cpp  stepping_simple_timer_test.cpp
tests/movement/: physics_test.cpp  simple_steps_test.cpp
